Fix code block alignment

--- a/_assets/sass/_animations.sass
+++ b/_assets/sass/_animations.sass
@@ -7,6 +7,15 @@
     opacity: 1
     transform: translateY(0)
 
+@keyframes fadeOutDown
+  0%
+    opacity: 1
+    transform: translateY(0)
+
+  100%
+    opacity: 0
+    transform: translateY(25vh)
+
 .fadeInUp
   opacity: 0
   transform: translateY(-25%)
