--- a/_assets/sass/pages/_writing.sass
+++ b/_assets/sass/pages/_writing.sass
@@ -29,8 +29,8 @@ main > .post
     flex: 0 0 100%
     font-size: 1.125em
     line-height: $baseline
-    max-width: #{(1/1.125) * 36em}
-    width: 100%
+    max-width: 100%
+    width: #{(1/1.125) * 36em}
 
     @media (min-width: 42em)
       flex: 0 0 36em
